--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                         <h4 class="text-2xl text-gray-600 font-semibold ">Triangle</h4>
                         <p class="text-lg font-semibold">Area(A) = 0.5 X b X h</p>
                         <form class="flex items-center justify-center">
-                            <input class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="b">
+                            <input id="triangle-base" class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="b">
                             <span class="m-2 text-xl font-semibold">cm</span> 
-                            <input class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="h">
+                            <input id="triangle-height" class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="h">
                             <span class="m-2 text-xl font-semibold">cm</span> 
                         </form>
-                        <button class="btn btn-info text-white text-xl w-full">Calculate</button>
+                        <button onclick="calculateTriangle()" class="btn btn-info text-white text-xl w-full">Calculate</button>
                     </div>
                     <!-- Rectangle -->
                     <div class="border border-gray-400 rounded-xl py-8 px-4 flex flex-col items-center gap-4">
@@ -143,14 +143,20 @@
             </div>
 
             <!-- calculation area -->
-            <div class="border border-gray-400 w-full md:w-60 h-48 rounded-xl px-4 pt-4 text-center">
-                <h4 class="text-xl underline font-semibold">Area Calculation</h4>
+            <div class="border border-gray-400 w-full md:w-60 h-96 rounded-xl px-4 pt-4 ">
+                <h4 class="text-2xl underline font-semibold text-center mb-4">Area Calculation</h4>
+
+                <div class="text-xl font-semibold ">
+                    <p>Area: <span id="triangle-area">0</span> <span>cm<sup>2</sup></span> </p>
+                </div>
             </div>
         </section>
     </main>
 
     <!-- ***** Footer Section ***** -->
     <footer></footer>
+
+    <script src="script/script.js"></script>
 </body>
 
 </html>
