--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
                         <h4 class="text-2xl text-gray-600 font-semibold ">Rectangle</h4>
                         <p class="text-lg font-semibold">Area(A) = w X l</p>
                         <form class="flex items-center justify-center">
-                            <input class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="w">
+                            <input id="rectangle-width" class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="w">
                             <span class="m-2 text-xl font-semibold">cm</span> 
-                            <input class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="l">
+                            <input id="rectangle-length" class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="l">
                             <span class="m-2 text-xl font-semibold">cm</span> 
                         </form>
-                        <button class="btn btn-info text-white text-xl w-full">Calculate</button>
+                        <button onclick="calculateRectangle()" class="btn btn-info text-white text-xl w-full">Calculate</button>
                     </div>
                     <!-- Parallelogram -->
                     <div class="border border-gray-400 rounded-xl py-8 px-4 flex flex-col items-center gap-4">
@@ -93,12 +93,12 @@
                         <h4 class="text-2xl text-gray-600 font-semibold ">Parallelogram</h4>
                         <p class="text-lg font-semibold">Area(A) = b x h</p>
                         <form class="flex items-center justify-center">
-                            <input class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="b">
+                            <input id="parallelogram-base" class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="b">
                             <span class="m-2 text-xl font-semibold">cm</span> 
-                            <input class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="h">
+                            <input id="parallelogram-height" class="bg-gray-200 text-xl w-20 p-2 rounded-md" type="text" placeholder="h">
                             <span class="m-2 text-xl font-semibold">cm</span> 
                         </form>
-                        <button class="btn btn-info text-white text-xl w-full">Calculate</button>
+                        <button onclick="calculateParallelogram()" class="btn btn-info text-white text-xl w-full">Calculate</button>
                     </div>
                     <!-- Rhombus -->
                     <div class="border border-gray-400 rounded-xl py-8 px-4 flex flex-col items-center gap-4">
@@ -143,11 +143,13 @@
             </div>
 
             <!-- calculation area -->
-            <div class="border border-gray-400 w-full md:w-60 h-96 rounded-xl px-4 pt-4 ">
+            <div class="border border-gray-400 w-full md:w-72 h-96 rounded-xl px-4 pt-4 ">
                 <h4 class="text-2xl underline font-semibold text-center mb-4">Area Calculation</h4>
 
                 <div class="text-xl font-semibold ">
-                    <p>Area: <span id="triangle-area">0</span> <span>cm<sup>2</sup></span> </p>
+                    <p>1. Triangle: <span id="triangle-area">0</span> <span>cm<sup>2</sup></span> </p>
+                    <p>2. Rectangle: <span id="rectangle-area">0</span> <span>cm<sup>2</sup></span> </p>
+                    <p>3. Parallelogram: <span id="parallelogram-area">0</span> <span>cm<sup>2</sup></span> </p>
                 </div>
             </div>
         </section>
